# attio-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
attio_mcp/: __init__.py  attio_client.py  auth.py  config.py  server.py
deploy/: docker-compose.coolify.yml  docker-compose.local.yml  docker-compose.yml
tests/: __init__.py  conftest.py  test_auth.py  test_get_company_details.py  test_get_company_notes.py  test_get_person_details.py  test_get_person_notes.py  test_get_workspace_member.py  test_list_tasks.py  test_list_workspace_members_tool.py  test_search_companies.py  test_search_people.py  test_search_workspace_member_by_email.py
